# multimet

./: .gitignore  README.md  pyproject.toml
multimet/: __init__.py  preprocess.py  stats.py
multimet/utils/: __init__.py  files.py  lists.py  npy.py  plt.py
scripts/CEDAS2021/: PG_CEDAS2021.py
scripts/Data/: all_members_first_location.py  avg_std_between_members_all_locations.py  compute_mean_variations.py  distplots_all_locations.py  first_location_mean_std_kurtosis.py  grid_mean_std_kurtosis.py  mvg_avg_first_location.py  pairplots_all_locations.py  pairplots_compare_t2m_tcwv_with_log.py
scripts/EGU2021/: PG_EGU.py
scripts/Exploration/: brute_force_clustering.py
scripts/MLVis2021/: PG_on_MLVisData.py  PG_on_MLVisData_talk.py
scripts/PG/: PG_mjo.py  PG_multivariate.py  PG_on_real_data.py  PG_on_toy_examples.py
scripts/ToyEx/: generate_data.py  generate_toy_examples.py  select_best_toy_examples.py
