[tool.poetry]
name = "multimet"
version = "0.1.0"
description = ""
authors = ["Natacha Galmiche <natacha.galmiche@uib.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
persigraph = {git = "git@github.com:nglm/persigraph.git"}
netCDF4 = "^1.6.0"
pandas = "^1.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
