[tool.poetry]
name = "multimet"
version = "0.1.0"
description = ""
authors = ["Natacha Galmiche <natacha.galmiche@uib.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
netCDF4 = "^1.6.0"
pandas = "^1.4.3"
persigraph = {git = "https://github.com/nglm/persigraph.git"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
