[tool.poetry]
name = "multimet"
version = "0.1.0"
description = ""
authors = ["Natacha Galmiche <natacha.galmiche@uib.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
persigraph = {git = "https://github.com/nglm/persigraph.git"}
pandas = "^2.0.2"
netcdf4 = "^1.6.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
